<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微信精准测试</string>
    <string name="hello_world">Hello world!</string>

    <string name="float_start">Start</string>
    <string name="float_stop">Stop</string>

    <string name="jicheng_case_title">集成用例</string>
    <string name="case_menu_save">save</string>
    <string name="title_activity_laucnch">LaucnchActivity</string>
    <string name="title_activity_test_plan">TestPlanActivity</string>
    <string name="entry_jicheng">集成用例</string>
    <string name="entry_prompt">推荐用例</string>
    <string name="entry_auto">自动化用例</string>


    <string name="case_run">执行</string>
    <string name="case_ignore">忽略</string>
    <string name="case_check">查看结果</string>
    <string name="case_stop">停止</string>

    <string name="case_start_errmsg">开始执行case失败，确定是否是精准测试的包。请联系xiazeng...</string>
    <string name="case_stop_errmsg">结束执行case失败，请联系xiazeng</string>
    <string name="title_activity_case_result">CaseResultActivity</string>

    <string name="check_thread_statistic">线程统计：</string>
    <string name="check_method_statistic">函数统计：</string>

    <string name="check_statistics_title">用例统计：</string>

    <string name="check_detail_title">各线程详细信息：</string>

    <string name="case_float_title">精准测试用例</string>
    <string name="case_float_start">开始</string>
    <string name="case_float_main_menu">主界面</string>
    <string name="case_float_pass">通过</string>
    <string name="case_float_goon">继续</string>
    <string name="case_float_skip">跳过</string>
    <string name="case_float_failed">失败</string>
    <string name="case_float_stop">关闭</string>
    <string name="case_float_input">输入：</string>
    <string name="case_float_output">输出：</string>
    <string name="case_float_checkout">检查：</string>

    <string name="back">返回</string>

    <string name="action_setting">设置</string>
    <string name="action_action_refresh">刷新</string>

    <string name="provider_label">caseProvider</string>

    <string name="title_activity_result">用例执行结果</string>
    <string name="title_activity_base">用例</string>
    <string name="title_activity_launch">LaunchActivity</string>


</resources>
