<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/case_detail_float_ly"
    android:background="#2F2F2F">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/case_float_title"
            android:id="@+id/textView3"
            android:layout_marginLeft="5dp"
            android:textSize="20dp"
            android:padding="5dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:id="@+id/case_float_stop_btn"
                android:layout_gravity="right|center"
                android:textSize="20dp"
                android:padding="5dp"
                android:layout_marginRight="5dp" />
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_height="2dp"
        android:layout_width="fill_parent"
        android:background="#90909090"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:contextClickable="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="fill_parent"
            android:text="asdadsada"
            android:layout_height="wrap_content"
            android:id="@+id/case_defail_tv"/>

        <!--
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="case title"
            android:id="@+id/case_float_case_title"
            android:textSize="18dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/case_float_input" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="model"
                    android:id="@+id/case_float_input" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/case_float_output"
                    android:id="@+id/textView9" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="model"
                    android:id="@+id/case_float_output" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/case_float_checkout"
                    android:id="@+id/textView8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="input"
                    android:id="@+id/case_float_case_check" />
            </LinearLayout>

        </LinearLayout>
        -->
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/case_page"
            android:layout_gravity="right"
            android:layout_marginRight="10dp" />
    </LinearLayout>

    <View
        android:layout_height="2dp"
        android:layout_width="fill_parent"
        android:background="#90909090"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|right"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/case_float_start"
                android:id="@+id/case_float_start_btn" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/case_float_skip"
                android:id="@+id/case_float_skip_btn" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/case_check"
                android:id="@+id/case_check_btn"
                android:enabled="false" />


        </LinearLayout>
    </LinearLayout>

</LinearLayout>